# telegram-weather-bot

./: .gitignore  main.py  pyproject.toml
api/: api.py  models.py
utils/: constants.py
